Konwerter_PASCAL_C/Tools/PascalParser.py
# Generated from Pascal.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PascalParser ( Parser ):

    grammarFileName = "Pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':='", "';'", 
                     "','", "'.'", "'('", "')'", "'['", "']'", "'..'", "':'" ]

    symbolicNames = [ "<INVALID>", "KEYWORD_PROGRAM", "KEYWORD_VAR", "KEYWORD_BEGIN", 
                      "KEYWORD_END", "KEYWORD_IF", "KEYWORD_THEN", "KEYWORD_ELSE", 
                      "KEYWORD_WHILE", "KEYWORD_DO", "KEYWORD_FOR", "KEYWORD_TO", 
                      "KEYWORD_PROCEDURE", "KEYWORD_FUNCTION", "KEYWORD_REPEAT", 
                      "KEYWORD_UNTIL", "KEYWORD_CASE", "KEYWORD_OF", "KEYWORD_ARRAY", 
                      "TYPE_INTEGER", "TYPE_REAL", "TYPE_BOOLEAN", "TYPE_CHAR", 
                      "TYPE_LONGINT", "REL_OP", "ADD_OP", "MUL_OP", "INT_OP", 
                      "LOG_OP_AND", "LOG_OP_OR", "LOG_OP_NOT", "ASSIGN", 
                      "PUNCT_SEMI", "PUNCT_COMMA", "PUNCT_DOT", "PUNCT_LPAREN", 
                      "PUNCT_RPAREN", "PUNCT_LBRACKET", "PUNCT_RBRACKET", 
                      "PUNCT_DOTDOT", "COLON", "STRING", "BOOLEAN_CONST", 
                      "IDENTIFIER", "NUMBER", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_declarations = 2
    RULE_variableDeclarationPart = 3
    RULE_variableDeclaration = 4
    RULE_identifierList = 5
    RULE_type = 6
    RULE_simpleType = 7
    RULE_arrayType = 8
    RULE_indexRange = 9
    RULE_sign = 10
    RULE_subprogramDeclarations = 11
    RULE_subprogramDeclaration = 12
    RULE_subprogramHead = 13
    RULE_formalParameterList = 14
    RULE_formalParameterGroup = 15
    RULE_variable = 16
    RULE_compoundStatement = 17
    RULE_statementList = 18
    RULE_statement = 19
    RULE_assignmentStatement = 20
    RULE_caseStatement = 21
    RULE_caseElement = 22
    RULE_caseLabelList = 23
    RULE_constant = 24
    RULE_procedureCall = 25
    RULE_argumentList = 26
    RULE_ifStatement = 27
    RULE_whileStatement = 28
    RULE_repeatStatement = 29
    RULE_forStatement = 30
    RULE_expression = 31
    RULE_simpleExpression = 32
    RULE_term = 33
    RULE_factor = 34

    ruleNames =  [ "program", "block", "declarations", "variableDeclarationPart", 
                   "variableDeclaration", "identifierList", "type", "simpleType", 
                   "arrayType", "indexRange", "sign", "subprogramDeclarations", 
                   "subprogramDeclaration", "subprogramHead", "formalParameterList", 
                   "formalParameterGroup", "variable", "compoundStatement", 
                   "statementList", "statement", "assignmentStatement", 
                   "caseStatement", "caseElement", "caseLabelList", "constant", 
                   "procedureCall", "argumentList", "ifStatement", "whileStatement", 
                   "repeatStatement", "forStatement", "expression", "simpleExpression", 
                   "term", "factor" ]

    EOF = Token.EOF
    KEYWORD_PROGRAM=1
    KEYWORD_VAR=2
    KEYWORD_BEGIN=3
    KEYWORD_END=4
    KEYWORD_IF=5
    KEYWORD_THEN=6
    KEYWORD_ELSE=7
    KEYWORD_WHILE=8
    KEYWORD_DO=9
    KEYWORD_FOR=10
    KEYWORD_TO=11
    KEYWORD_PROCEDURE=12
    KEYWORD_FUNCTION=13
    KEYWORD_REPEAT=14
    KEYWORD_UNTIL=15
    KEYWORD_CASE=16
    KEYWORD_OF=17
    KEYWORD_ARRAY=18
    TYPE_INTEGER=19
    TYPE_REAL=20
    TYPE_BOOLEAN=21
    TYPE_CHAR=22
    TYPE_LONGINT=23
    REL_OP=24
    ADD_OP=25
    MUL_OP=26
    INT_OP=27
    LOG_OP_AND=28
    LOG_OP_OR=29
    LOG_OP_NOT=30
    ASSIGN=31
    PUNCT_SEMI=32
    PUNCT_COMMA=33
    PUNCT_DOT=34
    PUNCT_LPAREN=35
    PUNCT_RPAREN=36
    PUNCT_LBRACKET=37
    PUNCT_RBRACKET=38
    PUNCT_DOTDOT=39
    COLON=40
    STRING=41
    BOOLEAN_CONST=42
    IDENTIFIER=43
    NUMBER=44
    COMMENT=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_PROGRAM(self):
            return self.getToken(PascalParser.KEYWORD_PROGRAM, 0)

        def IDENTIFIER(self):
            return self.getToken(PascalParser.IDENTIFIER, 0)

        def PUNCT_SEMI(self):
            return self.getToken(PascalParser.PUNCT_SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(PascalParser.BlockContext,0)


        def PUNCT_DOT(self):
            return self.getToken(PascalParser.PUNCT_DOT, 0)

        def EOF(self):
            return self.getToken(PascalParser.EOF, 0)

        def PUNCT_LPAREN(self):
            return self.getToken(PascalParser.PUNCT_LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def PUNCT_RPAREN(self):
            return self.getToken(PascalParser.PUNCT_RPAREN, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(PascalParser.KEYWORD_PROGRAM)
            self.state = 71
            self.match(PascalParser.IDENTIFIER)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 72
                self.match(PascalParser.PUNCT_LPAREN)
                self.state = 73
                self.identifierList()
                self.state = 74
                self.match(PascalParser.PUNCT_RPAREN)


            self.state = 78
            self.match(PascalParser.PUNCT_SEMI)
            self.state = 79
            self.block()
            self.state = 80
            self.match(PascalParser.PUNCT_DOT)
            self.state = 81
            self.match(PascalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(PascalParser.DeclarationsContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(PascalParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PascalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.declarations()
            self.state = 84
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclarationPart(self):
            return self.getTypedRuleContext(PascalParser.VariableDeclarationPartContext,0)


        def subprogramDeclarations(self):
            return self.getTypedRuleContext(PascalParser.SubprogramDeclarationsContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = PascalParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.variableDeclarationPart()
            self.state = 87
            self.subprogramDeclarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_VAR(self):
            return self.getToken(PascalParser.KEYWORD_VAR, 0)

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(PascalParser.VariableDeclarationContext,i)


        def getRuleIndex(self):
            return PascalParser.RULE_variableDeclarationPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarationPart" ):
                listener.enterVariableDeclarationPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarationPart" ):
                listener.exitVariableDeclarationPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclarationPart" ):
                return visitor.visitVariableDeclarationPart(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclarationPart(self):

        localctx = PascalParser.VariableDeclarationPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclarationPart)
        self._la = 0 # Token type
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(PascalParser.KEYWORD_VAR)
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 90
                    self.variableDeclaration()
                    self.state = 93 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==43):
                        break

                pass
            elif token in [3, 12, 13]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(PascalParser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(PascalParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PascalParser.TypeContext,0)


        def PUNCT_SEMI(self):
            return self.getToken(PascalParser.PUNCT_SEMI, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = PascalParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.identifierList()
            self.state = 99
            self.match(PascalParser.COLON)
            self.state = 100
            self.type_()
            self.state = 101
            self.match(PascalParser.PUNCT_SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.IDENTIFIER)
            else:
                return self.getToken(PascalParser.IDENTIFIER, i)

        def PUNCT_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.PUNCT_COMMA)
            else:
                return self.getToken(PascalParser.PUNCT_COMMA, i)

        def getRuleIndex(self):
            return PascalParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = PascalParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PascalParser.IDENTIFIER)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 104
                self.match(PascalParser.PUNCT_COMMA)
                self.state = 105
                self.match(PascalParser.IDENTIFIER)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleType(self):
            return self.getTypedRuleContext(PascalParser.SimpleTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(PascalParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = PascalParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.simpleType()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_INTEGER(self):
            return self.getToken(PascalParser.TYPE_INTEGER, 0)

        def TYPE_REAL(self):
            return self.getToken(PascalParser.TYPE_REAL, 0)

        def TYPE_BOOLEAN(self):
            return self.getToken(PascalParser.TYPE_BOOLEAN, 0)

        def TYPE_CHAR(self):
            return self.getToken(PascalParser.TYPE_CHAR, 0)

        def TYPE_LONGINT(self):
            return self.getToken(PascalParser.TYPE_LONGINT, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_simpleType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleType" ):
                listener.enterSimpleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleType" ):
                listener.exitSimpleType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleType" ):
                return visitor.visitSimpleType(self)
            else:
                return visitor.visitChildren(self)




    def simpleType(self):

        localctx = PascalParser.SimpleTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_simpleType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16252928) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_ARRAY(self):
            return self.getToken(PascalParser.KEYWORD_ARRAY, 0)

        def PUNCT_LBRACKET(self):
            return self.getToken(PascalParser.PUNCT_LBRACKET, 0)

        def indexRange(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.IndexRangeContext)
            else:
                return self.getTypedRuleContext(PascalParser.IndexRangeContext,i)


        def PUNCT_RBRACKET(self):
            return self.getToken(PascalParser.PUNCT_RBRACKET, 0)

        def KEYWORD_OF(self):
            return self.getToken(PascalParser.KEYWORD_OF, 0)

        def type_(self):
            return self.getTypedRuleContext(PascalParser.TypeContext,0)


        def PUNCT_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PascalParser.PUNCT_COMMA)
            else:
                return self.getToken(PascalParser.PUNCT_COMMA, i)

        def getRuleIndex(self):
            return PascalParser.RULE_arrayType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = PascalParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(PascalParser.KEYWORD_ARRAY)
            self.state = 118
            self.match(PascalParser.PUNCT_LBRACKET)
            self.state = 119
            self.indexRange()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 120
                self.match(PascalParser.PUNCT_COMMA)
                self.state = 121
                self.indexRange()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(PascalParser.PUNCT_RBRACKET)
            self.state = 128
            self.match(PascalParser.KEYWORD_OF)
            self.state = 129
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.ConstantContext)
            else:
                return self.getTypedRuleContext(PascalParser.ConstantContext,i)


        def PUNCT_DOTDOT(self):
            return self.getToken(PascalParser.PUNCT_DOTDOT, 0)

        def sign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.SignContext)
            else:
                return self.getTypedRuleContext(PascalParser.SignContext,i)


        def getRuleIndex(self):
            return PascalParser.RULE_indexRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexRange" ):
                listener.enterIndexRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexRange" ):
                listener.exitIndexRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexRange" ):
                return visitor.visitIndexRange(self)
            else:
                return visitor.visitChildren(self)




    def indexRange(self):

        localctx = PascalParser.IndexRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_indexRange)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 131
                self.sign()


            self.state = 134
            self.constant()
            self.state = 135
            self.match(PascalParser.PUNCT_DOTDOT)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 136
                self.sign()


            self.state = 139
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD_OP(self):
            return self.getToken(PascalParser.ADD_OP, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_sign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSign" ):
                listener.enterSign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSign" ):
                listener.exitSign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSign" ):
                return visitor.visitSign(self)
            else:
                return visitor.visitChildren(self)




    def sign(self):

        localctx = PascalParser.SignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(PascalParser.ADD_OP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubprogramDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
